--- a/GardenWeb/appsettings.json
+++ b/GardenWeb/appsettings.json
@@ -17,9 +17,9 @@
     "Audience": "https://localhost:49153/"
   },
   "MailSettings": {
-    "Mail": "thkim@n-link.co.kr",
-    "DisplayName": "Garden",
-    "Password": "tlqkfsha44w!",
+    "Mail": "",
+    "DisplayName": "",
+    "Password": "",
     "Host": "smtp.gmail.com",
     "Post": 587
   }
